[package]
name = "jaust"
version = "0.1.0"
authors = ["zwennesm <zwennesm@protonmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.1"
harsh = "0.1.6"
rand = "0.6.5"
serde_json = "1.0"

redis = "0.10"
diesel = {version = "1.4.2", features = ["postgres"]}
openssl = "*"

[dependencies.rocket_contrib]
version = "0.4.1"
default-features = false
features = ["tera_templates", "diesel_postgres_pool"]